--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "scripts": {
     "build": "next build",
     "serve": "next start",
-    "start": "next"
+    "start": "next",
+    "type-check": "tsc"
   },
   "dependencies": {
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "typescript": "3.7.3"
   }
 }
