--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "build": "next build",
+    "lint": "tslint -p . 'components/**/*.ts?(x)' 'pages/**/*.ts?(x)'",
     "serve": "next start",
     "start": "next",
     "type-check": "tsc"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
@@ -16,6 +19,7 @@
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "tslint": "^6.0.0",
     "typescript": "3.7.3"
   }
 }
