--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "tslint": "^6.0.0",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react-hooks": "^2.2.1",
     "typescript": "3.7.3"
   }
 }
