--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
+    "bcrypt": "^4.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/mongoose": "^5.7.1",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
